--- a/.eslintrc
+++ b/.eslintrc
@@ -2,6 +2,7 @@
   "extends": "@antfu",
   "rules": {
     "arrow-parens": ["error", "as-needed"],
+    "no-console": ["warn"],
     "curly": ["error", "all"]
   }
 }
