chore: edit package.json

--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "project-starter",
-  "version": "1.0.0",
-  "description": "",
-  "author": "",
-  "license": "ISC",
-  "keywords": [],
-  "main": "index.js",
+  "type": "module",
+  "version": "0.0.0",
+  "private": true,
+  "packageManager": "pnpm@7.26.0",
+  "engines": {
+    "node": ">=16.11.0"
+  },
   "scripts": {
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
