--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
     "node": ">=16.11.0"
   },
   "scripts": {
+    "build": "node scripts/build.js",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
+    "preinstall": "node ./scripts/preinstall.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.35.2",
+    "@types/node": "^16.4.7",
     "eslint": "^8.34.0"
   }
 }
