--- a/package.json
+++ b/package.json
@@ -16,7 +16,24 @@
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.35.2",
+    "@babel/parser": "^7.20.15",
+    "@babel/types": "^7.20.7",
+    "@rollup/plugin-alias": "^4.0.3",
+    "@rollup/plugin-commonjs": "^24.0.1",
+    "@rollup/plugin-json": "^6.0.0",
+    "@rollup/plugin-node-resolve": "^15.0.1",
+    "@rollup/plugin-replace": "^5.0.2",
+    "@rollup/plugin-terser": "^0.4.0",
     "@types/node": "^16.4.7",
-    "eslint": "^8.34.0"
+    "brotli": "^1.3.2",
+    "chalk": "^4.1.0",
+    "esbuild": "^0.17.4",
+    "eslint": "^8.34.0",
+    "execa": "^4.0.2",
+    "magic-string": "^0.27.0",
+    "minimist": "^1.2.0",
+    "rollup": "~3.10.0",
+    "rollup-plugin-esbuild": "^5.0.0",
+    "rollup-plugin-polyfill-node": "^0.11.0"
   }
 }
