--- a/packages/vite-vue3-ts-practice/package.json
+++ b/packages/vite-vue3-ts-practice/package.json
@@ -15,6 +15,8 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
     "typescript": "^4.9.3",
+    "unplugin-auto-import": "^0.14.3",
+    "unplugin-vue-components": "^0.24.0",
     "vite": "^4.1.0",
     "vite-plugin-pages": "^0.28.0",
     "vue-tsc": "^1.0.24"
