--- a/packages/vite-vue3-ts-practice/package.json
+++ b/packages/vite-vue3-ts-practice/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.0.10",
+    "element-plus": "^2.2.31",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6"
   },
