--- a/packages/vite-vue3-ts-practice/package.json
+++ b/packages/vite-vue3-ts-practice/package.json
@@ -21,6 +21,7 @@
     "unplugin-vue-components": "^0.24.0",
     "vite": "^4.1.0",
     "vite-plugin-pages": "^0.28.0",
+    "vite-plugin-vue-layouts": "^0.7.0",
     "vue-tsc": "^1.0.24"
   }
 }
