style: lint project

--- a/.eslintrc
+++ b/.eslintrc
@@ -2,7 +2,8 @@
   "extends": "@antfu",
   "rules": {
     "arrow-parens": ["error", "as-needed"],
-    "brace-style": ["error", "1tbs"],
+    "brace-style": "off",
+    "@typescript-eslint/brace-style": ["error", "1tbs"],
     "no-console": ["warn"],
     "curly": ["error", "all"]
   }
