--- a/packages/vite-vue3-ts-practice/package.json
+++ b/packages/vite-vue3-ts-practice/package.json
@@ -17,9 +17,11 @@
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
+    "@iconify-json/ep": "^1.1.9",
     "@vitejs/plugin-vue": "^4.0.0",
     "typescript": "^4.9.3",
     "unplugin-auto-import": "^0.14.3",
+    "unplugin-icons": "^0.15.3",
     "unplugin-vue-components": "^0.24.0",
     "vite": "^4.1.0",
     "vite-plugin-pages": "^0.28.0",
