--- a/packages/vite-vue3-ts-practice/package.json
+++ b/packages/vite-vue3-ts-practice/package.json
@@ -12,6 +12,7 @@
     "@ant-design/icons-vue": "^6.1.0",
     "@element-plus/icons-vue": "^2.0.10",
     "ant-design-vue": "^3.2.15",
+    "dayjs": "^1.11.7",
     "element-plus": "^2.2.31",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6"
