--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,34 +1,12 @@
 {
   "compilerOptions": {
-    "baseUrl": ".",
-    "outDir": "temp",
-    "sourceMap": false,
-    "target": "es2016",
-    "newLine": "LF",
-    "useDefineForClassFields": false,
-    "module": "esnext",
-    "moduleResolution": "node",
-    "allowJs": false,
-    "strict": true,
-    "noUnusedLocals": true,
-    "experimentalDecorators": true,
-    "resolveJsonModule": true,
-    "isolatedModules": true,
-    "skipLibCheck": true,
-    "esModuleInterop": true,
-    "removeComments": false,
-    "jsx": "preserve",
-    "lib": ["esnext", "dom"],
-    "types": ["node"],
-    "rootDir": ".",
-    "paths": {
-    }
+    "target": "ESNext",
+    "moduleResolution": "Bundler"
   },
-  "include": [
-    "packages/global.d.ts",
-    "packages/*/src",
-    "packages/runtime-dom/types/jsx.d.ts",
-    "packages/*/__tests__",
-    "packages/dts-test"
-  ]
+  "references": [
+    // 聚合 ts project
+    { "path": "./tsconfig.node.json" },
+    { "path": "./tsconfig.src.json" }
+  ],
+  "files": []
 }
