--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint-plugin-format": "^0.1.1",
     "husky": "^9.0.11",
     "lint-staged": "^15.2.2",
+    "naive-ui": "^2.38.2",
     "pinia": "^2.1.7",
     "typescript": "^5.4.5",
     "unbuild": "^2.0.0",
