wip(vue-ts,server): request & server

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@unocss/reset": "^0.60.2",
     "@vitejs/plugin-vue": "^5.0.4",
     "@vueuse/core": "^10.9.0",
+    "axios": "^1.7.1",
     "eslint": "^9.3.0",
     "eslint-plugin-format": "^0.1.1",
     "husky": "^9.0.11",
