chore(server): manage type by self

--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -20,6 +20,7 @@
   "exclude": [
     // 暂时先排除产物目录，packages/xxx/dist/x.config.js 或者 node_modules/pkg/x.config.js 不会被包含进来
     "**/dist",
-    "**/node_modules"
+    "**/node_modules",
+    "packages/server"
   ]
 }
