--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "lint-staged": "^15.2.2",
     "naive-ui": "^2.38.2",
     "pinia": "^2.1.7",
+    "type-fest": "^4.18.2",
     "typescript": "^5.4.5",
     "unbuild": "^2.0.0",
     "unocss": "^0.60.2",
