--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -21,6 +21,6 @@
     // 暂时先排除产物目录，packages/xxx/dist/x.config.js 或者 node_modules/pkg/x.config.js 不会被包含进来
     "**/dist",
     "**/node_modules",
-    "packages/server"
+    "packages/nitro-server"
   ]
 }
