--- a/packages/nitro-server/package.json
+++ b/packages/nitro-server/package.json
@@ -2,7 +2,7 @@
   "name": "@project-starter/nirto-server",
   "private": true,
   "scripts": {
-    "dev": "nitro dev",
+    "dev": "PORT=5000 nitro dev",
     "build": "nitro build",
     "prepare": "nitro prepare",
     "preview": "node .output/server/index.mjs"
