--- a/packages/server-nitro/package.json
+++ b/packages/server-nitro/package.json
@@ -2,7 +2,8 @@
   "name": "@project-starter/nirto-server",
   "private": true,
   "scripts": {
-    "dev": "PORT=5000 nitro dev"
+    "dev": "PORT=5000 nitro dev",
+    "prepare": "nitro prepare"
   },
   "devDependencies": {
     "nitropack": "latest"
