refactor: with turbo
1. with turbo manage monorepo task and internal denpence
2. add some internal deps under packages dir
3. update deps

--- a/package.json
+++ b/package.json
@@ -3,47 +3,26 @@
   "type": "module",
   "version": "0.0.0",
   "private": true,
-  "packageManager": "pnpm@9.1.1",
+  "packageManager": "pnpm@9.9.0",
   "engines": {
-    "node": ">=20.9.0"
+    "node": ">=20.16.0"
   },
   "scripts": {
-    "dev": "echo dev",
-    "build": "echo build",
-    "lint": "eslint .",
-    "lint:fix": "eslint . --fix",
+    "dev": "turbo run dev",
+    "build": "turbo run build",
+    "preview": "turbo run preview",
+    "check-types": "turbo run check-types",
+    "root:lint": "eslint .",
+    "root:lint:fix": "eslint . --fix",
     "prepare": "husky || true",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^2.18.1",
-    "@iconify/utils": "^2.1.23",
-    "@project-starter/shared": "workspace:*",
-    "@tanstack/vue-query": "^5.37.1",
-    "@tanstack/vue-query-devtools": "^5.37.1",
-    "@types/node": "^20.12.12",
-    "@unocss/reset": "^0.60.2",
-    "@vitejs/plugin-vue": "^5.0.4",
-    "@vueuse/core": "^10.9.0",
-    "axios": "^1.7.1",
-    "eslint": "^9.3.0",
-    "eslint-plugin-format": "^0.1.1",
-    "husky": "^9.0.11",
-    "lint-staged": "^15.2.2",
-    "naive-ui": "^2.38.2",
-    "pinia": "^2.1.7",
-    "type-fest": "^4.18.2",
-    "typescript": "^5.4.5",
-    "unbuild": "^2.0.0",
-    "unocss": "^0.60.2",
-    "unplugin-auto-import": "^0.17.6",
-    "unplugin-vue-components": "^0.27.0",
-    "unplugin-vue-router": "^0.8.6",
-    "vite": "^5.2.11",
-    "vite-plugin-vue-devtools": "^7.2.0",
-    "vue": "^3.4.27",
-    "vue-router": "^4.3.2",
-    "zod": "^3.23.8"
+    "@project-starter/eslint-config": "workspace:*",
+    "eslint": "^9.9.1",
+    "husky": "^9.1.5",
+    "lint-staged": "^15.2.9",
+    "turbo": "latest"
   },
   "lint-staged": {
     "*": "eslint --fix"
