--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
   // Enable the ESlint flat config support
   // (remove this if your ESLint extension above v3.0.5)
-  "eslint.experimental.useFlatConfig": true,
+  "eslint.useFlatConfig": true,
 
   // Disable the default formatter, use eslint instead
   "prettier.enable": false,
@@ -43,7 +43,9 @@
     "xml",
     "gql",
     "graphql",
-    "astro"
+    "astro",
+    "pcss",
+    "postcss"
   ],
-  "typescript.tsdk": "node_modules/typescript/lib"
+  "typescript.tsdk": "packages/typescript-config/node_modules/typescript/lib"
 }
