--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -1,19 +1,21 @@
 {
   "name": "@project-starter/shared",
   "type": "module",
-  "version": "0.0.0",
+  "private": true,
   "exports": {
-    ".": {
-      "import": "./dist/index.mjs",
-      "require": "./dist/index.cjs"
-    }
+    "./utils": "./src/utils/index.ts",
+    "./utils/*": "./src/utils/*.ts"
   },
-  "main": "./dist/index.cjs",
-  "types": "./dist/index.d.ts",
-  "files": [
-    "dist"
-  ],
   "scripts": {
-    "build": "unbuild"
+    "check-types": "tsc --noEmit"
+  },
+  "devDependencies": {
+    "@project-starter/typescript-config": "workspace:*",
+    "axios": "^1.7.5",
+    "consola": "^3.2.3",
+    "dayjs": "^1.11.13",
+    "es-toolkit": "^1.16.0",
+    "scule": "^1.3.0",
+    "typescript": "^5.5.4"
   }
 }
