--- a/packages/unocss-config/package.json
+++ b/packages/unocss-config/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@project-starter/eslint-config",
+  "name": "@project-starter/unocss-config",
   "type": "module",
   "private": true,
   "exports": {
@@ -26,12 +26,11 @@
     "check-types": "tsc --noEmit",
     "postinstall": "pnpm build"
   },
+  "peerDependencies": {
+    "unocss": "^0.62.3"
+  },
   "dependencies": {
-    "@antfu/eslint-config": "^2.27.3",
-    "@unocss/eslint-plugin": "^0.62.3",
-    "eslint": "^9.9.1",
-    "eslint-flat-config-utils": "^0.3.1",
-    "eslint-plugin-format": "^0.1.2"
+    "@iconify/utils": "^2.1.32"
   },
   "devDependencies": {
     "@project-starter/typescript-config": "workspace:*",
