--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -16,6 +16,7 @@
     "dayjs": "^1.11.13",
     "es-toolkit": "^1.17.0",
     "scule": "^1.3.0",
-    "typescript": "^5.5.4"
+    "typescript": "^5.5.4",
+    "worker-timers": "^8.0.5"
   }
 }
