--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "version": "0.0.0",
   "private": true,
-  "packageManager": "pnpm@9.9.0",
+  "packageManager": "pnpm@9.10.0",
   "engines": {
     "node": ">=20.16.0"
   },
@@ -24,9 +24,9 @@
     "@project-starter/eslint-config": "workspace:*",
     "@project-starter/unocss-config": "workspace:*",
     "defu": "^6.1.4",
-    "eslint": "^9.9.1",
-    "husky": "^9.1.5",
-    "jiti": "^1.21.6",
+    "eslint": "^9.10.0",
+    "husky": "^9.1.6",
+    "jiti": "^2.0.0-beta.3",
     "lint-staged": "^15.2.10",
     "turbo": "latest"
   },
