--- a/apps/nuxt/package.json
+++ b/apps/nuxt/package.json
@@ -15,6 +15,7 @@
     "postinstall": "nuxi prepare"
   },
   "devDependencies": {
+    "@hebilicious/vue-query-nuxt": "^0.3.0",
     "@iconify-json/prime": "^1.2.0",
     "@nuxt/eslint": "^0.5.7",
     "@nuxt/icon": "^1.5.1",
@@ -27,11 +28,21 @@
     "@project-starter/eslint-config": "workspace:*",
     "@project-starter/shared": "workspace:*",
     "@project-starter/unocss-config": "workspace:*",
+    "@tanstack/vue-query": "^5.56.2",
+    "@tanstack/vue-query-devtools": "^5.56.2",
     "@unocss/nuxt": "^0.62.3",
     "@unocss/reset": "^0.62.3",
+    "@vee-validate/nuxt": "^4.13.2",
+    "@vee-validate/zod": "^4.13.2",
     "@vite-pwa/nuxt": "^0.10.5",
     "@vueuse/core": "^11.1.0",
     "@vueuse/nuxt": "^11.1.0",
+    "filepond": "^4.31.3",
+    "filepond-plugin-file-rename": "^1.1.8",
+    "filepond-plugin-file-validate-type": "^1.2.9",
+    "filepond-plugin-image-preview": "^4.6.12",
+    "json-editor-vue": "^0.16.0",
+    "lossless-json": "^4.0.1",
     "nuxt": "^3.13.2",
     "pinia": "^2.2.2",
     "postcss-mixins": "^11.0.1",
@@ -39,6 +50,11 @@
     "primevue": "^4.0.7",
     "typescript": "^5.6.2",
     "unocss": "^0.62.3",
-    "vue-tsc": "^2.1.6"
+    "vanilla-jsoneditor": "^0.23.8",
+    "vee-validate": "^4.13.2",
+    "vue-component-type-helpers": "^2.1.6",
+    "vue-filepond": "^7.0.4",
+    "vue-tsc": "^2.1.6",
+    "zod": "^3.23.8"
   }
 }
