feat(apps/nuxt): add nprogress for  sakai layer

--- a/package.json
+++ b/package.json
@@ -32,6 +32,11 @@
     "rimraf": "^6.0.1",
     "turbo": "latest"
   },
+  "pnpm": {
+    "patchedDependencies": {
+      "nprogress": "patches/nprogress.patch"
+    }
+  },
   "lint-staged": {
     "*": "eslint --fix"
   }
