--- a/apps/nuxt/package.json
+++ b/apps/nuxt/package.json
@@ -30,6 +30,7 @@
     "@project-starter/unocss-config": "workspace:*",
     "@tanstack/vue-query": "^5.56.2",
     "@tanstack/vue-query-devtools": "^5.56.2",
+    "@types/nprogress": "^0.2.3",
     "@unocss/nuxt": "^0.62.3",
     "@unocss/reset": "^0.62.3",
     "@vee-validate/nuxt": "^4.13.2",
@@ -43,6 +44,7 @@
     "filepond-plugin-image-preview": "^4.6.12",
     "json-editor-vue": "^0.16.0",
     "lossless-json": "^4.0.1",
+    "nprogress": "^0.2.0",
     "nuxt": "^3.13.2",
     "pinia": "^2.2.2",
     "postcss-mixins": "^11.0.1",
