refactor: to subcontract

--- a/apps/nuxt/package.json
+++ b/apps/nuxt/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "dev": "nuxi dev --host",
+    "dev": "nuxi dev --host --fork",
     "dev:pwa": "VITE_PLUGIN_PWA=true nuxi dev --host",
     "build": "nuxi build",
     "generate": "nuxi generate",
@@ -16,50 +16,25 @@
   },
   "devDependencies": {
     "@hebilicious/vue-query-nuxt": "^0.3.0",
-    "@iconify-json/prime": "^1.2.0",
     "@nuxt/devtools": "^1.5.1",
     "@nuxt/eslint": "^0.5.7",
-    "@nuxt/icon": "^1.5.1",
-    "@nuxt/kit": "^3.13.2",
-    "@nuxt/schema": "^3.13.2",
-    "@nuxtjs/color-mode": "^3.5.1",
+    "@nuxt/icon": "^1.5.2",
     "@pinia/nuxt": "^0.5.4",
-    "@primevue/nuxt-module": "^4.0.7",
-    "@primevue/themes": "^4.0.7",
     "@project-starter/eslint-config": "workspace:*",
+    "@project-starter/nuxt-layer-sakai": "workspace:*",
     "@project-starter/shared": "workspace:*",
     "@project-starter/unocss-config": "workspace:*",
     "@tanstack/vue-query": "^5.56.2",
-    "@tanstack/vue-query-devtools": "^5.56.2",
-    "@types/nprogress": "^0.2.3",
+    "@tanstack/vue-query-devtools": "^5.58.0",
     "@unocss/nuxt": "^0.62.4",
     "@unocss/reset": "^0.62.4",
-    "@vee-validate/nuxt": "^4.13.2",
-    "@vee-validate/zod": "^4.13.2",
     "@vite-pwa/nuxt": "^0.10.5",
-    "@vueuse/core": "^11.1.0",
-    "@vueuse/motion": "^2.2.5",
-    "@vueuse/nuxt": "^11.1.0",
-    "chart.js": "^4.4.4",
-    "filepond": "^4.31.3",
-    "filepond-plugin-file-rename": "^1.1.8",
-    "filepond-plugin-file-validate-type": "^1.2.9",
-    "filepond-plugin-image-preview": "^4.6.12",
-    "json-editor-vue": "^0.16.0",
-    "lossless-json": "^4.0.1",
-    "nprogress": "^0.2.0",
     "nuxt": "^3.13.2",
     "pinia": "^2.2.2",
-    "postcss-mixins": "^11.0.1",
+    "postcss-mixins": "^11.0.2",
     "postcss-nesting": "^13.0.0",
-    "primevue": "^4.0.7",
     "typescript": "^5.6.2",
     "unocss": "^0.62.4",
-    "vanilla-jsoneditor": "^0.23.8",
-    "vee-validate": "^4.13.2",
-    "vue-component-type-helpers": "^2.1.6",
-    "vue-filepond": "^7.0.4",
-    "vue-tsc": "^2.1.6",
-    "zod": "^3.23.8"
+    "vue-tsc": "^2.1.6"
   }
 }
