--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "version": "0.0.0",
   "private": true,
-  "packageManager": "pnpm@9.10.0",
+  "packageManager": "pnpm@9.11.0",
   "engines": {
     "node": ">=20.16.0"
   },
@@ -25,9 +25,9 @@
     "@project-starter/eslint-config": "workspace:*",
     "@project-starter/unocss-config": "workspace:*",
     "defu": "^6.1.4",
-    "eslint": "^9.10.0",
+    "eslint": "^9.11.1",
     "husky": "^9.1.6",
-    "jiti": "^2.0.0-beta.3",
+    "jiti": "^2.0.0",
     "lint-staged": "^15.2.10",
     "rimraf": "^6.0.1",
     "turbo": "latest"
