chore(packages/nuxt-layer-*): add pkg script dev
"dev": "nuxi prepare",

--- a/packages/nuxt-layer-sakai/package.json
+++ b/packages/nuxt-layer-sakai/package.json
@@ -8,6 +8,7 @@
   },
   "main": "./nuxt.config.ts",
   "scripts": {
+    "dev": "nuxi prepare",
     "clear": "rm -rf .nuxt .output",
     "postinstall": "nuxi prepare"
   },
