--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -11,10 +11,12 @@
   },
   "devDependencies": {
     "@project-starter/typescript-config": "workspace:*",
+    "@types/tinycolor2": "^1.4.6",
     "axios": "^1.7.7",
     "consola": "^3.2.3",
     "dayjs": "^1.11.13",
     "es-toolkit": "^1.23.0",
+    "tinycolor2": "^1.6.0",
     "typescript": "^5.6.2",
     "worker-timers": "^8.0.6"
   }
