--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -1,4 +1,7 @@
 {
+  "name": "@project-starter/docs",
+  "type": "module",
+  "private": true,
   "scripts": {
     "dev": "vitepress dev",
     "build": "vitepress build",
