--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -21,7 +21,7 @@
     "dist"
   ],
   "scripts": {
-    "dev": "unbuild --watch",
+    "dev": "unbuild",
     "build": "unbuild",
     "check-types": "tsc --noEmit",
     "postinstall": "pnpm build"
