--- a/packages/nuxt-layer-sakai/package.json
+++ b/packages/nuxt-layer-sakai/package.json
@@ -23,6 +23,8 @@
     "@project-starter/nuxt-layer-shared": "workspace:*",
     "@project-starter/shared": "workspace:*",
     "@types/nprogress": "^0.2.3",
+    "@vee-validate/nuxt": "^4.14.7",
+    "@vee-validate/zod": "^4.14.7",
     "chart.js": "^4.4.6",
     "filepond": "^4.32.2",
     "filepond-plugin-file-rename": "^1.1.8",
@@ -34,6 +36,7 @@
     "primevue": "^4.2.3",
     "unocss": "^0.64.1",
     "vanilla-jsoneditor": "^2.1.0",
+    "vee-validate": "^4.14.7",
     "vue-filepond": "^7.0.4"
   },
   "devDependencies": {
