--- a/apps/nuxt/package.json
+++ b/apps/nuxt/package.json
@@ -15,26 +15,26 @@
     "postinstall": "nuxi prepare"
   },
   "devDependencies": {
-    "@hebilicious/vue-query-nuxt": "^0.3.0",
-    "@nuxt/devtools": "^1.6.3",
-    "@nuxt/eslint": "^0.7.2",
-    "@nuxt/icon": "^1.9.0",
-    "@pinia/nuxt": "^0.8.0",
+    "@hebilicious/vue-query-nuxt": "catalog:",
+    "@nuxt/devtools": "catalog:",
+    "@nuxt/eslint": "catalog:",
+    "@nuxt/icon": "catalog:",
+    "@pinia/nuxt": "catalog:",
     "@project-starter/eslint-config": "workspace:*",
     "@project-starter/nuxt-layer-sakai": "workspace:*",
     "@project-starter/shared": "workspace:*",
     "@project-starter/unocss-config": "workspace:*",
-    "@tanstack/vue-query": "^5.62.2",
-    "@tanstack/vue-query-devtools": "^5.62.2",
-    "@unocss/nuxt": "^0.65.0",
-    "@unocss/reset": "^0.65.0",
-    "@vite-pwa/nuxt": "^0.10.6",
-    "nuxt": "^3.14.1592",
-    "pinia": "^2.2.8",
-    "postcss-mixins": "^11.0.3",
-    "postcss-nesting": "^13.0.1",
-    "typescript": "^5.7.2",
-    "unocss": "^0.65.0",
-    "vue-tsc": "^2.1.10"
+    "@tanstack/vue-query": "catalog:",
+    "@tanstack/vue-query-devtools": "catalog:",
+    "@unocss/nuxt": "catalog:",
+    "@unocss/reset": "catalog:",
+    "@vite-pwa/nuxt": "catalog:",
+    "nuxt": "catalog:",
+    "pinia": "catalog:",
+    "postcss-mixins": "catalog:",
+    "postcss-nesting": "catalog:",
+    "typescript": "catalog:",
+    "unocss": "catalog:",
+    "vue-tsc": "catalog:"
   }
 }
