--- a/package.json
+++ b/package.json
@@ -24,12 +24,12 @@
   "devDependencies": {
     "@project-starter/eslint-config": "workspace:*",
     "@project-starter/unocss-config": "workspace:*",
-    "defu": "^6.1.4",
-    "eslint": "^9.16.0",
-    "husky": "^9.1.7",
-    "jiti": "^2.4.1",
-    "lint-staged": "^15.2.10",
-    "rimraf": "^6.0.1",
+    "defu": "catalog:",
+    "eslint": "catalog:",
+    "husky": "catalog:",
+    "jiti": "catalog:",
+    "lint-staged": "catalog:",
+    "rimraf": "catalog:",
     "turbo": "latest"
   },
   "pnpm": {
