--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -14,20 +14,20 @@
     "check-types": "tsc --noEmit"
   },
   "dependencies": {
-    "@types/tinycolor2": "^1.4.6",
-    "axios": "^1.7.8",
-    "consola": "^3.2.3",
-    "dayjs": "^1.11.13",
-    "es-toolkit": "^1.29.0",
-    "tinycolor2": "^1.6.0",
-    "type-fest": "^4.30.0",
-    "vee-validate": "^4.14.7",
-    "vue": "^3.5.13",
-    "worker-timers": "^8.0.11",
-    "zod": "^3.23.8"
+    "@types/tinycolor2": "catalog:",
+    "axios": "catalog:",
+    "consola": "catalog:",
+    "dayjs": "catalog:",
+    "es-toolkit": "catalog:",
+    "tinycolor2": "catalog:",
+    "type-fest": "catalog:",
+    "vee-validate": "catalog:",
+    "vue": "catalog:",
+    "worker-timers": "catalog:",
+    "zod": "catalog:"
   },
   "devDependencies": {
     "@project-starter/typescript-config": "workspace:*",
-    "typescript": "^5.7.2"
+    "typescript": "catalog:"
   }
 }
