--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -27,15 +27,15 @@
     "postinstall": "pnpm build"
   },
   "dependencies": {
-    "@antfu/eslint-config": "^3.11.2",
-    "@unocss/eslint-plugin": "^0.65.0",
-    "eslint": "^9.16.0",
-    "eslint-flat-config-utils": "^0.4.0",
-    "eslint-plugin-format": "^0.1.3"
+    "@antfu/eslint-config": "catalog:",
+    "@unocss/eslint-plugin": "catalog:",
+    "eslint": "catalog:",
+    "eslint-flat-config-utils": "catalog:",
+    "eslint-plugin-format": "catalog:"
   },
   "devDependencies": {
     "@project-starter/typescript-config": "workspace:*",
-    "typescript": "^5.7.2",
-    "unbuild": "3.0.0-rc.7"
+    "typescript": "catalog:",
+    "unbuild": "catalog:"
   }
 }
