--- a/packages/nuxt-layer-shared/package.json
+++ b/packages/nuxt-layer-shared/package.json
@@ -9,15 +9,15 @@
     "postinstall": "nuxi prepare"
   },
   "dependencies": {
-    "@nuxtjs/color-mode": "^3.5.2",
-    "@vueuse/core": "^12.0.0",
-    "@vueuse/motion": "^2.2.6",
-    "@vueuse/nuxt": "^12.0.0",
-    "vue-component-type-helpers": "^2.1.10",
-    "zod": "^3.23.8"
+    "@nuxtjs/color-mode": "catalog:",
+    "@vueuse/core": "catalog:",
+    "@vueuse/motion": "catalog:",
+    "@vueuse/nuxt": "catalog:",
+    "vue-component-type-helpers": "catalog:",
+    "zod": "catalog:"
   },
   "devDependencies": {
-    "nuxt": "^3.14.1592",
-    "typescript": "^5.7.2"
+    "nuxt": "catalog:",
+    "typescript": "catalog:"
   }
 }
