chore: update vscode extensions recommendations

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,6 +1,8 @@
 {
   "recommendations": [
     "antfu.unocss",
+    "antfu.iconify",
+    "antfu.pnpm-catalog-lens",
     "dbaeumer.vscode-eslint",
     "vue.volar"
   ]
