chore(packages/nuxt-layer-sakai): clear type for primevue config

--- a/packages/nuxt-layer-sakai/package.json
+++ b/packages/nuxt-layer-sakai/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@iconify-json/prime": "catalog:",
+    "@nuxt/schema": "catalog:",
     "@primevue/nuxt-module": "catalog:",
     "@primevue/themes": "catalog:",
     "@project-starter/nuxt-layer-shared": "workspace:*",
