--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -9,6 +9,7 @@ catalog:
   '@nuxt/devtools': ^1.6.3
   '@nuxt/eslint': ^0.7.2
   '@nuxt/icon': ^1.9.0
+  '@nuxt/schema': ^3.14.1592
   '@nuxtjs/color-mode': ^3.5.2
   '@pinia/nuxt': ^0.8.0
   '@primevue/nuxt-module': ^4.2.4
