refactor(packages/nuxt-layer-shared): move some moduless to shared layer
- @nuxt/devtools
- @nuxt/icon
- @nux/telemetry: if you want to enabled, must enabled in target nuxt project, see https://github.com/nuxt/telemetry/blob/6ec2978f04194bd3d8ace8a659c77c3a49e114a6/src/module.ts#L30-L39

--- a/packages/nuxt-layer-shared/package.json
+++ b/packages/nuxt-layer-shared/package.json
@@ -9,6 +9,8 @@
     "postinstall": "nuxi prepare"
   },
   "dependencies": {
+    "@nuxt/devtools": "catalog:",
+    "@nuxt/icon": "catalog:",
     "@nuxtjs/color-mode": "catalog:",
     "@vueuse/core": "catalog:",
     "@vueuse/motion": "catalog:",
