--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "node": ">=20.16.0"
   },
   "scripts": {
-    "dev": "turbo watch dev",
+    "dev": "turbo run dev",
     "build": "turbo run build",
     "generate": "turbo run generate",
     "preview": "turbo run preview",
