Revert "build: dev hmr"
This reverts commit 3b8aa32ebdb1d4267e7eaa3e0d96a06e3d1a68fc.

--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -21,7 +21,7 @@
     "dist"
   ],
   "scripts": {
-    "dev": "unbuild --stub",
+    "dev": "unbuild",
     "build": "unbuild",
     "check-types": "tsc --noEmit",
     "postinstall": "pnpm build"
