refactor(packages/unocss-config,packages/eslintconfig)!: handle merge inside

--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -28,6 +28,7 @@
   },
   "dependencies": {
     "@antfu/eslint-config": "catalog:",
+    "@project-starter/shared": "workspace:*",
     "@unocss/eslint-plugin": "catalog:",
     "eslint": "catalog:",
     "eslint-flat-config-utils": "catalog:",
