feat(packages/shared): add form configuration utility
Added a set of utility functions and type definitions for handling form configurations, including:

- Core type definitions for form data, fields, and groups
- Implementation of defineSharedForm function for creating standardized form configs
- Support for field grouping, array fields, and cascade fields
- Support for custom field types and extra configurations
- Complete unit test coverage

This utility helps unify and simplify form configuration handling, improving form development efficiency.

--- a/package.json
+++ b/package.json
@@ -24,13 +24,15 @@
   "devDependencies": {
     "@project-starter/eslint-config": "workspace:*",
     "@project-starter/unocss-config": "workspace:*",
+    "@vitest/coverage-v8": "catalog:",
     "defu": "catalog:",
     "eslint": "catalog:",
     "husky": "catalog:",
     "jiti": "catalog:",
     "lint-staged": "catalog:",
     "rimraf": "catalog:",
-    "turbo": "latest"
+    "turbo": "latest",
+    "vitest": "catalog:"
   },
   "pnpm": {
     "patchedDependencies": {
