--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -11,6 +11,7 @@
     "./utils/*": "./src/utils/*.ts"
   },
   "scripts": {
+    "test": "vitest",
     "check-types": "tsc --noEmit"
   },
   "dependencies": {
