--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -24,6 +24,7 @@ catalog:
   '@vee-validate/nuxt': ^4.14.7
   '@vee-validate/zod': ^4.14.7
   '@vite-pwa/nuxt': ^0.10.6
+  '@vitest/coverage-v8': ^2.1.8
   '@vueuse/core': ^12.0.0
   '@vueuse/motion': ^2.2.6
   '@vueuse/nuxt': ^12.0.0
@@ -60,6 +61,7 @@ catalog:
   vanilla-jsoneditor: ^2.3.1
   vee-validate: ^4.14.7
   vitepress: ^1.5.0
+  vitest: ^2.1.8
   vue: ^3.5.13
   vue-component-type-helpers: ^2.1.10
   vue-filepond: ^7.0.4
