refactor(shared): toggle color mode

--- a/packages/nuxt-layer-shared/package.json
+++ b/packages/nuxt-layer-shared/package.json
@@ -13,6 +13,7 @@
     "@nuxt/devtools": "catalog:",
     "@nuxt/icon": "catalog:",
     "@nuxtjs/color-mode": "catalog:",
+    "@project-starter/shared": "workspace:*",
     "@vueuse/core": "catalog:",
     "@vueuse/motion": "catalog:",
     "@vueuse/nuxt": "catalog:",
