--- a/packages/unocss-config/package.json
+++ b/packages/unocss-config/package.json
@@ -27,7 +27,7 @@
     "postinstall": "pnpm build"
   },
   "peerDependencies": {
-    "unocss": "^0.62.3"
+    "unocss": "catalog:"
   },
   "dependencies": {
     "@iconify/utils": "catalog:",
