--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -2,25 +2,25 @@ packages:
   - apps/*
   - packages/*
 catalog:
-  '@antfu/eslint-config': ^3.11.2
+  '@antfu/eslint-config': ^3.12.0
   '@hebilicious/vue-query-nuxt': ^0.3.0
-  '@iconify-json/prime': ^1.2.1
-  '@iconify/utils': ^2.1.33
-  '@nuxt/devtools': ^1.6.3
-  '@nuxt/eslint': ^0.7.2
-  '@nuxt/icon': ^1.9.0
+  '@iconify-json/prime': ^1.2.2
+  '@iconify/utils': ^2.2.1
+  '@nuxt/devtools': ^1.6.4
+  '@nuxt/eslint': ^0.7.3
+  '@nuxt/icon': ^1.10.2
   '@nuxt/schema': ^3.14.1592
   '@nuxtjs/color-mode': ^3.5.2
-  '@pinia/nuxt': ^0.8.0
-  '@primevue/nuxt-module': ^4.2.4
-  '@primevue/themes': ^4.2.4
-  '@tanstack/vue-query': ^5.62.2
-  '@tanstack/vue-query-devtools': ^5.62.2
+  '@pinia/nuxt': ^0.9.0
+  '@primevue/nuxt-module': ^4.2.5
+  '@primevue/themes': ^4.2.5
+  '@tanstack/vue-query': ^5.62.8
+  '@tanstack/vue-query-devtools': ^5.62.8
   '@types/nprogress': ^0.2.3
   '@types/tinycolor2': ^1.4.6
-  '@unocss/eslint-plugin': ^0.65.0
-  '@unocss/nuxt': ^0.65.0
-  '@unocss/reset': ^0.65.0
+  '@unocss/eslint-plugin': ^0.65.2
+  '@unocss/nuxt': ^0.65.2
+  '@unocss/reset': ^0.65.2
   '@vee-validate/nuxt': ^4.14.7
   '@vee-validate/zod': ^4.14.7
   '@vite-pwa/nuxt': ^0.10.6
@@ -28,13 +28,13 @@ catalog:
   '@vueuse/core': ^12.0.0
   '@vueuse/motion': ^2.2.6
   '@vueuse/nuxt': ^12.0.0
-  axios: ^1.7.8
+  axios: ^1.7.9
   chart.js: ^4.4.7
   consola: ^3.2.3
   dayjs: ^1.11.13
   defu: ^6.1.4
-  es-toolkit: ^1.29.0
-  eslint: ^9.16.0
+  es-toolkit: ^1.30.1
+  eslint: ^9.17.0
   eslint-flat-config-utils: ^0.4.0
   eslint-plugin-format: ^0.1.3
   filepond: ^4.32.5
@@ -42,23 +42,23 @@ catalog:
   filepond-plugin-file-validate-type: ^1.2.9
   filepond-plugin-image-preview: ^4.6.12
   husky: ^9.1.7
-  jiti: ^2.4.1
+  jiti: ^2.4.2
   json-editor-vue: ^0.17.3
-  lint-staged: ^15.2.10
+  lint-staged: ^15.2.11
   lossless-json: ^4.0.2
   nprogress: ^0.2.0
   nuxt: ^3.14.1592
-  pinia: ^2.2.8
+  pinia: ^2.3.0
   postcss-mixins: ^11.0.3
   postcss-nesting: ^13.0.1
   primevue: ^4.2.4
   rimraf: ^6.0.1
   tinycolor2: ^1.6.0
-  type-fest: ^4.30.0
+  type-fest: ^4.30.2
   typescript: ^5.7.2
-  unbuild: 3.0.0-rc.7
-  unocss: ^0.65.0
-  vanilla-jsoneditor: ^2.3.1
+  unbuild: ^3.0.1
+  unocss: ^0.65.2
+  vanilla-jsoneditor: ^2.3.3
   vee-validate: ^4.14.7
   vitepress: ^1.5.0
   vitest: ^2.1.8
@@ -69,4 +69,4 @@ catalog:
   # see https://github.com/vuejs/language-tools/issues/5018
   vue-tsc: https://pkg.pr.new/vuejs/language-tools/vue-tsc@3fb59af
   worker-timers: ^8.0.11
-  zod: ^3.23.8
+  zod: ^3.24.1
