--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -7,37 +7,37 @@ catalog:
   '@iconify-json/prime': ^1.2.2
   '@iconify/utils': ^2.2.1
   '@nuxt/devtools': ^1.6.4
-  '@nuxt/eslint': ^0.7.3
-  '@nuxt/icon': ^1.10.2
+  '@nuxt/eslint': ^0.7.4
+  '@nuxt/icon': ^1.10.3
   '@nuxt/schema': ^3.14.1592
   '@nuxtjs/color-mode': ^3.5.2
   '@pinia/nuxt': ^0.9.0
   '@primevue/nuxt-module': ^4.2.5
   '@primevue/themes': ^4.2.5
-  '@tanstack/vue-query': ^5.62.8
-  '@tanstack/vue-query-devtools': ^5.62.8
+  '@tanstack/vue-query': ^5.62.9
+  '@tanstack/vue-query-devtools': ^5.62.9
   '@types/nprogress': ^0.2.3
   '@types/tinycolor2': ^1.4.6
   '@unocss/eslint-plugin': ^0.65.2
   '@unocss/nuxt': ^0.65.2
   '@unocss/reset': ^0.65.2
-  '@vee-validate/nuxt': ^4.14.7
-  '@vee-validate/zod': ^4.14.7
+  '@vee-validate/nuxt': ^4.15.0
+  '@vee-validate/zod': ^4.15.0
   '@vite-pwa/nuxt': ^0.10.6
   '@vitest/coverage-v8': ^2.1.8
-  '@vueuse/core': ^12.0.0
+  '@vueuse/core': ^12.2.0
   '@vueuse/motion': ^2.2.6
-  '@vueuse/nuxt': ^12.0.0
+  '@vueuse/nuxt': ^12.2.0
   axios: ^1.7.9
   chart.js: ^4.4.7
-  consola: ^3.2.3
+  consola: ^3.3.1
   dayjs: ^1.11.13
   defu: ^6.1.4
   es-toolkit: ^1.30.1
   eslint: ^9.17.0
   eslint-flat-config-utils: ^0.4.0
   eslint-plugin-format: ^0.1.3
-  filepond: ^4.32.5
+  filepond: ^4.32.6
   filepond-plugin-file-rename: ^1.1.8
   filepond-plugin-file-validate-type: ^1.2.9
   filepond-plugin-image-preview: ^4.6.12
@@ -59,14 +59,12 @@ catalog:
   unbuild: ^3.0.1
   unocss: ^0.65.2
   vanilla-jsoneditor: ^2.3.3
-  vee-validate: ^4.14.7
+  vee-validate: ^4.15.0
   vitepress: ^1.5.0
   vitest: ^2.1.8
   vue: ^3.5.13
-  vue-component-type-helpers: ^2.1.10
+  vue-component-type-helpers: ^2.2.0
   vue-filepond: ^7.0.4
-  # vue-tsc: ^2.1.10
-  # see https://github.com/vuejs/language-tools/issues/5018
-  vue-tsc: https://pkg.pr.new/vuejs/language-tools/vue-tsc@3fb59af
+  vue-tsc: ^2.2.0
   worker-timers: ^8.0.11
   zod: ^3.24.1
