refactor(nuxt): move postcss plugin to nuxt-layer-basic
postcss-mixins
postcss-nesting

--- a/packages/nuxt-layer-basic/package.json
+++ b/packages/nuxt-layer-basic/package.json
@@ -17,6 +17,8 @@
     "@vueuse/core": "catalog:",
     "@vueuse/motion": "catalog:",
     "@vueuse/nuxt": "catalog:",
+    "postcss-mixins": "catalog:",
+    "postcss-nesting": "catalog:",
     "vue-component-type-helpers": "catalog:",
     "zod": "catalog:"
   },
