feat!(nuxt-layer-basic): add postcss-reset-env
- remove postcss-mixins, unused
- remove postcss-nesting, unneed

--- a/packages/nuxt-layer-basic/package.json
+++ b/packages/nuxt-layer-basic/package.json
@@ -17,8 +17,7 @@
     "@vueuse/core": "catalog:",
     "@vueuse/motion": "catalog:",
     "@vueuse/nuxt": "catalog:",
-    "postcss-mixins": "catalog:",
-    "postcss-nesting": "catalog:",
+    "postcss-preset-env": "catalog:",
     "vue-component-type-helpers": "catalog:",
     "zod": "catalog:"
   },
