--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -49,8 +49,7 @@ catalog:
   nprogress: ^0.2.0
   nuxt: ^3.15.0
   pinia: ^2.3.0
-  postcss-mixins: ^11.0.3
-  postcss-nesting: ^13.0.1
+  postcss-preset-env: ^10.1.2
   primevue: ^4.2.4
   rimraf: ^6.0.1
   tinycolor2: ^1.6.0
